Updated 'test' folder.

--- a/test/karger.bib
+++ b/test/karger.bib
@@ -31,14 +31,12 @@
 @string{journal = {Journal version appears in } }
 @string{special = {Special issue of selected papers from }}
 @string{esa = {European Symposium on Algorithms}}
-@string{sigir =  {Annual International {ACM} {SIGIR} Conference on
-		 Research and Development in Information Retrieval}}
+@string{sigir =  {Annual International {ACM} {SIGIR} Conference on Research and Development in Information Retrieval}}
 @string{focs =  {Annual Symposium on the Foundations of Computer Science}}
 @string{stoc =  {{ACM} Symposium on Theory of Computing}}
 @string{proc =  {Proceedings of the}}
 @string{soda =  {Annual {ACM}-{SIAM} Symposium on Discrete Algorithms}}
-@string{spaa = {Annual {ACM}-{SIAM} Symposium on
-		Parallel Algorithms and Architectures}}
+@string{spaa = {Annual {ACM}-{SIAM} Symposium on Parallel Algorithms and Architectures}}
 @string{swat = {Scandinavian Workshop on Algorithmic Theory}}
 @string{wads =  {Workshop on Algorithms and Data Structures}}
 @string{mor = {Mathematics of Operation Research}}
@@ -109,8 +107,7 @@
 @string{SPAA94 = proc # { {$6^{th}$} } # spaa}
 @string{SWAT90 = proc # { $2^{nd}$ } # swat}
 @string{WADS91 =  proc # { $2^{nd}$ } # wads}
-@string{SIGPLAN89 = proc # { SIGPLAN 89 Conference on
-Programming Language Design and Implementation}},
+@string{SIGPLAN89 = proc # { SIGPLAN 89 Conference on Programming Language Design and Implementation}}
 @string{icalpa = {Automata, Languages and Programming.}}
 @string{icalpb = {International Colloquium Proceedings}}
 @string{icalp90 = icalpa # { {$17^{th}$} } # icalpb}
@@ -119,17 +116,14 @@ Programming Language Design and Implementation}},
 @string{icalp93 = icalpa # { {$20^{th}$} } # icalpb}
 @string{icalp94 = icalpa # { {$21^{st}$} } # icalpb}
 @string{icalp95 = icalpa # { {$22^{nd}$} } # icalpb}
-@string{PODS91 = proc # { 10th {ACM} Symposium on Principles of
-			Database Systems}}
-@string{istcs95 = proc # {Israeli Symposium on Theoretical
-                  Computer Science}}
+@string{PODS91 = proc # { 10th {ACM} Symposium on Principles of Database Systems}}
+@string{istcs95 = proc # {Israeli Symposium on Theoretical Computer Science}}
 @string{ieeep = {IEEE Computer Society Press}}
 @string{acmp = {ACM Press}}
 @string{mitp = {{MIT} Press}}
 @string{sv = {Springer-Verlag}}
 @string{hbase="http://theory.lcs.mit.edu/~karger/Papers"}
 @string{hayweb="http://haystack.lcs.mit.edu/papers/"}
-
 @string{and = { and }}
 @string{aleliunas={R. Aleliunas}}
 @string{applegate = {David Appelgate}}
@@ -173,9 +167,9 @@ Programming Language Design and Implementation}},
 @string{vvazirani = {Vijay Vazirani}}
 @string{valiant = {Leslie Valiant}}
 @string{wagner = {F. Wagner}}
-@STRING{MIT             = "Massachusetts Institute of Technology"}
-@STRING{MITLCS          = MIT # " Laboratory for Computer Science"}
-@STRING{MIT-ADDR        = "Cambridge, Massachusetts"}
+@STRING{MIT = "Massachusetts Institute of Technology"}
+@STRING{MITLCS = MIT # " Laboratory for Computer Science"}
+@STRING{MIT-ADDR = "Cambridge, Massachusetts"}
 
 @inproceedings{Danis:ManyEyes,
  author = {Danis, Catalina M. and Viegas, Fernanda B. and Wattenberg, Martin and Kriss, Jesse},
@@ -311,10 +305,6 @@ year = 2012}
   crossref =	 {FOCS04},
   pages =	 {228--237}
 }
-
-START OF MY PUBS
-
-
 
 @techreport{Hickson:WebStorage,
   author = 	 {Ian Hickson},
@@ -456,7 +446,6 @@ url={http://twitinfo.csail.mit.edu/},
  address = {New York, NY, USA},
  keywords = {twitter visualization streaming aggregate sentiment},
 }
-BibTeX | EndNote | ACM Ref
 
 @article{Karger:HumanJoin,
  author = {Marcus, Adam and Wu, Eugene and Karger, David and Madden,
@@ -1602,8 +1591,7 @@ While inheriting the simplicity of Chord, Koorde meets various lower
 bounds, such as $O(\log n)$ hops per lookup request with only 2
 neighbors per node (where $n$ is the number of nodes in the DHT), and
 $O(\log n/\log\log n)$ hops per lookup request with $O(\log n)$
-neighbors per node.
-},
+neighbors per node.},
    cat:multiple =	{Theory;Systems; P2P; Applications of Theory},
 abstract = {Koorde is a new distributed hash table (DHT) based on Chord [15] and the de Bruijn graphs [2]. While inheriting the simplicity of Chord, Koorde meets various lower bounds, such as O(log n) hops per lookup request with only 2 neighbors per node (where n is the number of nodes in the DHT), and O(log n/ log log n) hops per lookup request with O(log n) neighbors per node.}
 }
@@ -1802,8 +1790,7 @@ abstract={  Most research on nearest neighbor algorithms in the literature has
   within radius $r$. Spaces of this kind occur in networking
   applications, such as the Internet or Peer-to-peer networks, and
   vector quantization applications, where feature vectors fall into
-  low-dimensional manifolds within high-dimensional vector spaces.
-}
+  low-dimensional manifolds within high-dimensional vector spaces.}
 }
 
 @Article{Karger:Chord,
@@ -1833,8 +1820,6 @@ each node scale logarithmically with the number of Chord nodes.
 }
 }
 
-
-
 @InProceedings{Arora:FastSparseCut,
   author = 	 {Sanjeev Arora and Elad Hazan and Satyen Kale},
   title = 	 {An {$O(\sqrt{\log n})$} Approximation to Sparsest Cut
@@ -1859,8 +1844,7 @@ abstract={Given a planar graph on $n$ nodes with costs (weights) on
                   $(1+\eps)$ times optimal in time $n^{O(1/\eps^2)}$.
 
 We also present a quasi-polynomial time algorithm for the Steiner
-version of this problem.
-},
+version of this problem.},
 	pages = {33--41}}
 
 @inproceedings{Karger:Nb,
@@ -1881,6 +1865,7 @@ version of this problem.
   url       = {http://nb.mit.edu/},
   ee        = {http://doi.acm.org/10.1145/2207676.2208326}
 }
+
 @inproceedings{Karger:DynamicCut,
         author = {Mikkel Thorup and  David R. Karger},
         title = {Dynamic Graph Algorithms with Applications},
@@ -2124,7 +2109,7 @@ pages = {601--640},
 		  and STOC 1993},
         ps = {http://people.csail.mit.edu/karger/Papers/contract.ps},
         doi = {http://doi.acm.org/10.1145/234533.234534},
-	year = 1996},
+	year = 1996,
 	abstract = { This paper present a new approach to finding minimum cuts in undirected graphs. The fundamental principle is simple: the edges in a graph's minimum cut form an extremely small fraction of the graph's edges. Using this idea, we give a randomized, strongly polynomial algorithm that finds the minimum cut in an arbitrarily weighted undirected graph with high probability. The algorithm runs in $O(n^2\log^3n)$ time, a significant improvement over the previous $\Olog(mn)$ time bounds based on maximum flows. It is simple and intuitive and uses no complex data structures. Our algorithm can be parallelized to run in RNC with n2 processors; this gives the first proof that the minimum cut problem can be solved in RNC. The algorithm does more than find a single minimum cut; it finds all of them.With minor modifications, our algorithm solves two other problems of interest. Our algorithm finds all cuts with value within a multiplicative factor of &agr; of the minimum cut's in expected $\Olog(n^{2\alpha})$ time, or in RNC with $n^{2\alpha}$ processors. The problem of finding a minimum multiway cut of graph into r pieces is solved in expected $\Olog(n^{2(r-1)})$ time, or in RNC with $n^{2(r-1)}$ processors. The ``trace'' the algorithm's execution on these two problems forms a new compact data structure for representing all small cuts and all multiway cuts in a graph. This data structure can be efficiently transformed into the more standard cactus representation for minimum cuts.
 }
 }
@@ -2138,8 +2123,8 @@ pages = {601--640},
         brag = journal # sicomp # { 28(3)},
         ps = {http://people.csail.mit.edu/karger/Papers/conn-components.ps},
 	pages = {562-572},
-abstract = { We present fast and efficient parallel algorithms for finding the connected components of an undirected graph. These algorithms run on the exclusive-read, exclusive-write (EREW) PRAM. On a graph with n vertices and m edges, our randomized algorithm runs in O(log n) time using $(m+n^{1+\epsilon})/\log n$ EREW processors (for any fixed $\epsilon>0$). A variant uses (m+n)/log n processors and runs in O(log n log log n) time. A deterministic version of the algorithm runs in $O(\log^{1.5}n)$ time using m+n EREW processors.
-}}
+abstract = { We present fast and efficient parallel algorithms for finding the connected components of an undirected graph. These algorithms run on the exclusive-read, exclusive-write (EREW) PRAM. On a graph with n vertices and m edges, our randomized algorithm runs in O(log n) time using $(m+n^{1+\epsilon})/\log n$ EREW processors (for any fixed $\epsilon>0$). A variant uses (m+n)/log n processors and runs in O(log n log log n) time. A deterministic version of the algorithm runs in $O(\log^{1.5}n)$ time using m+n EREW processors.}
+}
 
 @article{Karger:Connectivity,
         cat = {Theory},
@@ -2250,8 +2235,8 @@ venue={WADS},
         note = journal # ALGO # { 18(1)},
         pages = {421--430},
 abstract = {We consider the problem of approximating the longest path in undirected graphs. In an attempt to pin down the best achievable performance ratio of an approximation algorithm for this problem, we present both positive and negative results. First, a simple greedy algorithm is shown to find long paths in dense graphs. We then consider the problem of finding paths in graphs that are guaranteed to have extremely long paths. We devise an algorithm that finds paths of a logarithmic length in Hamiltonian graphs. This algorithm works for a much larger class of graphs (weakly Hamiltonian), where the result is the best possible. Since the hard case appears to be that of sparse graphs, we also consider sparse random graphs. Here we show that a relatively long path can be obtained, thereby partially answering an open problem of Broderet al.
-To explain the difficulty of obtaining better approximations, we also prove hardness results. We show that, for any e<1, the problem of finding a path of lengthn-n e in ann-vertex Hamiltonian graph isNP-hard. We then show that no polynomial-time algorithm can find a constant factor approximation to the longest-path problem unlessP=NP. We conjecture that the result can be strengthened to say that, for some constant d>0, finding an approximation of ration d is alsoNP-hard. As evidence toward this conjecture, we show that if any polynomial-time algorithm can approximate the longest path to a ratio of $$2^{O(\log ^{1 - \varepsilon } n)} $$ , for any e>0, thenNP has a quasi-polynomial deterministic time simulation. The hardness results apply even to the special case where the input consists of bounded degree graphs.
-}}
+To explain the difficulty of obtaining better approximations, we also prove hardness results. We show that, for any e<1, the problem of finding a path of lengthn-n e in ann-vertex Hamiltonian graph isNP-hard. We then show that no polynomial-time algorithm can find a constant factor approximation to the longest-path problem unlessP=NP. We conjecture that the result can be strengthened to say that, for some constant d>0, finding an approximation of ration d is alsoNP-hard. As evidence toward this conjecture, we show that if any polynomial-time algorithm can approximate the longest path to a ratio of $$2^{O(\log ^{1 - \varepsilon } n)} $$ , for any e>0, thenNP has a quasi-polynomial deterministic time simulation. The hardness results apply even to the special case where the input consists of bounded degree graphs.}
+}
 
 @Article{Karger:Hamilton,
   author = 	 {David R. Karger and G. D. S. Ramkumar and Rajeev
@@ -2267,9 +2252,8 @@ Motwani},
   ps = {http://people.csail.mit.edu/karger/Papers/hamilton.ps},
   note =	 prelim # {the 1993 Workshop on Algorithms and Data Structures},
 abstract = {We consider the problem of approximating the longest path in undirected graphs. In an attempt to pin down the best achievable performance ratio of an approximation algorithm for this problem, we present both positive and negative results. First, a simple greedy algorithm is shown to find long paths in dense graphs. We then consider the problem of finding paths in graphs that are guaranteed to have extremely long paths. We devise an algorithm that finds paths of a logarithmic length in Hamiltonian graphs. This algorithm works for a much larger class of graphs (weakly Hamiltonian), where the result is the best possible. Since the hard case appears to be that of sparse graphs, we also consider sparse random graphs. Here we show that a relatively long path can be obtained, thereby partially answering an open problem of Broderet al.
-To explain the difficulty of obtaining better approximations, we also prove hardness results. We show that, for any e<1, the problem of finding a path of lengthn-n e in ann-vertex Hamiltonian graph isNP-hard. We then show that no polynomial-time algorithm can find a constant factor approximation to the longest-path problem unlessP=NP. We conjecture that the result can be strengthened to say that, for some constant d>0, finding an approximation of ration d is alsoNP-hard. As evidence toward this conjecture, we show that if any polynomial-time algorithm can approximate the longest path to a ratio of $$2^{O(\log ^{1 - \varepsilon } n)} $$ , for any e>0, thenNP has a quasi-polynomial deterministic time simulation. The hardness results apply even to the special case where the input consists of bounded degree graphs.
-}}
-
+To explain the difficulty of obtaining better approximations, we also prove hardness results. We show that, for any e<1, the problem of finding a path of lengthn-n e in ann-vertex Hamiltonian graph isNP-hard. We then show that no polynomial-time algorithm can find a constant factor approximation to the longest-path problem unlessP=NP. We conjecture that the result can be strengthened to say that, for some constant d>0, finding an approximation of ration d is alsoNP-hard. As evidence toward this conjecture, we show that if any polynomial-time algorithm can approximate the longest path to a ratio of $$2^{O(\log ^{1 - \varepsilon } n)} $$ , for any e>0, thenNP has a quasi-polynomial deterministic time simulation. The hardness results apply even to the special case where the input consists of bounded degree graphs.}
+}
 
 @inproceedings{Karger:FastCut,
 	author = {David R. Karger and Clifford Stein},
@@ -2310,6 +2294,7 @@ abstract = { This paper present a new approach to finding minimum cuts
                   can be efficiently transformed into the more
                   standard cactus representing for minimum cuts.  }
 }
+
 @Inproceedings{Karger:Diminish,
   author = 	 {David R. Karger},
   title = 	 {Using Random Sampling to Find Maximum Flows
@@ -2612,10 +2597,9 @@ pub-type={Demo},
   studentwork  = student,
   pub-type={Poster},
 note={Poster.},
-  url = "citeseer.ist.psu.edu/563406.html"},
+  url = "citeseer.ist.psu.edu/563406.html",
 abstract = {Computer-based annotation is increasing in popularity as a mechanism for revising documents and sharing comments over the Internet. One reason behind this surge is that viewpoints, summaries, and notes written by others are often helpful to readers. In particular, these types of annotations can help users locate or recall relevant documents. We believe that this model can be applied to the problem of retrieval on the Semantic Web. In this paper, we propose a generalized annotation environment that supports richer forms of description such as natural language. We discuss how RDF can be used to model annotations and the connections between annotations and the documents they describe. Furthermore, we explore the idea of a question answering interface that allows retrieval based both on the text of the annotations and the annotations associated metadata. Finally, we speculate on how these features could be pervasively integrated into an information management environment, making Semantic Web annotation a first class player in terms of document management and retrieval}
 }
-
 
 @inproceedings{Adar99,
   note={see Karger:Haystack-CIKM}
@@ -2635,8 +2619,7 @@ abstract = {Computer-based annotation is increasing in popularity as a mechanism
   pdf = {Papers/cikm99.ps.pdf},
   pages =  {413--422},
   cat:multiple =	{Information Retrieval;Semantic Web;CHI;Haystack},
-abstract = { Traditional Information Retrieval (IR) systems are designed to provide uniform access to centralized corpora by large numbers of people. The Haystack project emphasizes the relationship between a particular individual and his corpus. An individual's own haystack priviliges information with which that user interacts, gathers data about those interactions, and uses this metadata to further personalize the retrieval process. This paper describes the prototype Haystack system.
-},
+abstract = { Traditional Information Retrieval (IR) systems are designed to provide uniform access to centralized corpora by large numbers of people. The Haystack project emphasizes the relationship between a particular individual and his corpus. An individual's own haystack priviliges information with which that user interacts, gathers data about those interactions, and uses this metadata to further personalize the retrieval process. This paper describes the prototype Haystack system.},
   studentwork  = student
 }
 
@@ -2652,6 +2635,7 @@ cat:multiple =	{Theory;Cuts and Flows},
 abstract = { We significantly improve known time bounds for solving the minimum cut problem on undirected graphs. We use a "semiduality" between minimum cuts and maximum spanning tree packings combined with our previously developed random sampling techniques. We give a randomized (Monte Carlo) algorithm that finds a minimum cut in an m-edge, n-vertex graph with high probability in O(m log3 n) time. We also give a simpler randomized algorithm that finds all minimum cuts with high probability in O(m log3 n) time. This variant has an optimal RNC parallelization. Both variants improve on the previous best time bound of O(n2 log3 n). Other applications of the tree-packing approach are new, nearly tight bounds on the number of near-minimum cuts a graph may have and a new data structure for representing them in a space-efficient manner.
 }
 }
+
 @article{Karger:Lincut,
   author = 	 karger,
   title = 	 "Minimum Cuts in Near-Linear Time",
@@ -2667,6 +2651,7 @@ cat:multiple =	{Theory;Cuts and Flows},
 abstract = { We significantly improve known time bounds for solving the minimum cut problem on undirected graphs. We use a "semiduality" between minimum cuts and maximum spanning tree packings combined with our previously developed random sampling techniques. We give a randomized (Monte Carlo) algorithm that finds a minimum cut in an m-edge, n-vertex graph with high probability in O(m log3 n) time. We also give a simpler randomized algorithm that finds all minimum cuts with high probability in O(m log3 n) time. This variant has an optimal RNC parallelization. Both variants improve on the previous best time bound of O(n2 log3 n). Other applications of the tree-packing approach are new, nearly tight bounds on the number of near-minimum cuts a graph may have and a new data structure for representing them in a space-efficient manner.
 }
 }
+
 @inproceedings{Karger:ImpConn-Conf,
   author = {Raj D. Iyer and David R. Karger and Hariharan Rahul and
                   Mikkel Thorup},
@@ -2697,11 +2682,8 @@ abstract = {We present an experimental study of different variants of the amorti
   cat = {Theory},
   brag = {Special issue of papers selected from ALENEX 2000},
   studentwork = student,
-abstract = {We present an experimental study of different variants of the amortized O(log2 n)-time fully-dynamic connectivity algorithm of Holm, de Lichtenberg, and Thorup (STOC'98). The experiments build upon experiments provided by Alberts, Cattaneo, and Italiano (SODA'96) on the randomized amortized O(log3 n) fully-dynamic connectivity algorithm of Henzinger and King (STOC'95). Our experiments shed light upon similarities and differences between the two algorithms. We also present a slightly modified version of the Henzinger-King algorithm that runs in O(log2 n) time, which resulted from our experiments.
-
+abstract = {We present an experimental study of different variants of the amortized O(log2 n)-time fully-dynamic connectivity algorithm of Holm, de Lichtenberg, and Thorup (STOC'98). The experiments build upon experiments provided by Alberts, Cattaneo, and Italiano (SODA'96) on the randomized amortized O(log3 n) fully-dynamic connectivity algorithm of Henzinger and King (STOC'95). Our experiments shed light upon similarities and differences between the two algorithms. We also present a slightly modified version of the Henzinger-King algorithm that runs in O(log2 n) time, which resulted from our experiments.}
 }
-  }
-
 
 @inproceedings{Karger:ImpCut,
   author = 	 "Chandra C. Chekuri and Andrew V. Goldberg and
@@ -2766,10 +2748,10 @@ some of the improved performance. As one example,
 we formally prove the accuracy of a simple heuristic
 approximation for the reliability. We also discuss other
 questions raised by the implementation which might be
-susceptible to analysis.
-},
+susceptible to analysis.},
   studentwork = student
 }
+
 @InProceedings{Karger:ImpWeb-Conf,
   author =       "David Karger and Alex Sherman and Andy Berkheimer and
                  Bill Bogstad and Rizwan Dhanidina and Ken Iwamoto and
@@ -2802,6 +2784,7 @@ venue={WWW},
                  support our thesis that it can provide performance
                  improvements.",
 }
+
 @Article{Karger:ImpWeb-Journal,
   author =       "David Karger and Alex Sherman and Andy Berkheimer and
                  Bill Bogstad and Rizwan Dhanidina and Ken Iwamoto and
@@ -2909,7 +2892,7 @@ note={Preliminary version in IPTPS 2004},
 ps={Papers/loadbalancing-spaa.ps},
 pdf={Papers/loadbalancing-spaa.pdf},
 abstract = {Load balancing is a critical issue for the efficient operation of peer-to-peer networks. We give two new load-balancing protocols whose provable performance guarantees are within a constant factor of optimal. Our protocols refine the consistent hashing data structure that underlies the Chord (and Koorde) P2P network. Both preserve Chord's logarithmic query time and near-optimal data migration cost.Consistent hashing is an instance of the distributed hash table (DHT) paradigm for assigning items to nodes in a peer-to-peer system: items and nodes are mapped to a common address space, and nodes have to store all items residing closeby in the address space.Our first protocol balances the distribution of the key address space to nodes, which yields a load-balanced system when the DHT maps items "randomly" into the address space. To our knowledge, this yields the first P2P scheme simultaneously achieving O(log n) degree, O(log n) look-up cost, and constant-factor load balance (previous schemes settled for any two of the three).Our second protocol aims to directly balance the distribution of items among the nodes. This is useful when the distribution of items in the address space cannot be randomized. We give a simple protocol that balances load by moving nodes to arbitrary locations "where they are needed." As an application, we use the last protocol to give an optimal implementation of a distributed data structure for range searches on ordered data.}
- }
+}
 
 @article{Karger:P2PLoadBalance-Journal,
  author = {David R. Karger and Matthias Ruhl},
@@ -2926,9 +2909,8 @@ pdf={Papers/dht-loadbalance-journal.pdf},
 abstract = {Load balancing is a critical issue for the efficient operation of peer-to-peer (P2P) networks. We give two new load-balancing protocols whose provable performance guarantees are within a constant factor of optimal. Our protocols refine the consistent hashing data structure that underlies the Chord (and Koorde) P2P network. Both preserve Chord's logarithmic query time and near-optimal data migration cost.
 Consistent hashing is an instance of the distributed hash table (DHT) paradigm for assigning items to nodes in a P2P system: items and nodes are mapped to a common address space, and nodes have to store all items residing closeby in the address space.
 Our first protocol balances the distribution of the key address space to nodes, which yields a load-balanced system when the DHT maps items "randomly" into the address space. To our knowledge, this yields the first P2P scheme simultaneously achieving O(log n) degree, O(log n) look-up cost, and constant-factor load balance (previous schemes settled for any two of the three).
-Our second protocol aims to balance directly the distribution of items among the nodes. This is useful when the distribution of items in the address space cannot be randomized. We give a simple protocol that balances load by moving nodes to arbitrary locations "where they are needed." As an application, we use the last protocol to give an optimal implementation of a distributed data structure for range searches on ordered data.
+Our second protocol aims to balance directly the distribution of items among the nodes. This is useful when the distribution of items in the address space cannot be randomized. We give a simple protocol that balances load by moving nodes to arbitrary locations "where they are needed." As an application, we use the last protocol to give an optimal implementation of a distributed data structure for range searches on ordered data.}
 }
- }
 
 @inproceedings{Karger:DetNetCoding,
 author = {Nicholas J. A. Harvey and David R. Karger and Kazuo Murota},
@@ -3172,8 +3154,8 @@ of at most 1.945 for all m, which is significantly closer
 to the best known lower bound of 1.837 for the problem.
 We show that our analysis of the algorithm is almost tight
 by presenting a lower bound of 1.9378 on the algorithm's
-competitive ratio for large m.
-}}
+competitive ratio for large m.}
+}
 
 @Article{Karger:Makespan,
   author = 	 {David R. Karger and Steven Phillips and Eric Torng},
@@ -3578,8 +3560,7 @@ equivalently to minimize the number of jobs that do not complete by
 their due date and that thus can be considered \rejected." We inves-
 tigate the approximability of a simple version of this problem, giving
 approximation algorithms and characterizing integrality gaps of a class
-of linear-programming relaxations.
-},
+of linear-programming relaxations.},
   ISSN =         "0302-9743"}
 
 @inproceedings{Karger:Reliability-Conf,
@@ -4159,12 +4140,10 @@ hash functions, we are able to develop caching protocols which do
 not require users to have a current or even consistent view of the
 network. We believe that consistent hash functions may eventually
 prove to be useful in other applications such as distributed name
-servers and/or quorum systems.
-},
+servers and/or quorum systems.},
 cat:multiple =	{Theory;Applications of Theory},
   studentwork = {\asteriskit{\labelwidth} } # " "
 }
-
 
 @inproceedings{Karger:Cactus,
  author = {Karger, David R. and Panigrahi, Debmalya},
@@ -5750,11 +5729,6 @@ connectivity with applications},
 pages={92--102},
 crossref={FOCS95}}
 
-
-\bibitem{Thesis} Bencz\'ur, A.A., \emb{Cut structures and randomized
-    algorithms in edge-connectivity problems}, Ph.D. Thesis,
-  Massachusetts Institute of Technology (1997).  Available at {\tt
-    http://pele.ilab.sztaki.hu/\~benczur/ Mypapers/Thesis.ps.gz}
 
 @phdthesis{Benczur:Thesis,
 	author = benczur,
@@ -8536,8 +8510,6 @@ the Probability that a Network Remains Connected},
 	pages  = {103--127},
 	year = 1991}
 
-
-letter r
 @techreport{Raghavan:Randomization,
 	author = {Prabhakar Raghavan},
 	title = {Lecture Notes on Randomized Algorithms},
@@ -11198,8 +11170,6 @@ number = 1,
 year= 2004
 }
 
-
------------CROSS REFERENCES-------------
 @proceedings{esa94,
         title = esa94,
         booktitle = esa94,
