--- a/test/onlinealgs.bib
+++ b/test/onlinealgs.bib
@@ -18,7 +18,7 @@
 % jiri, Jul 1-8, 2010
 % marek, July 12, 2010
 % jiri, Nov 10, 2010
-# jiri, Nov 22, 2010
+% jiri, Nov 22, 2010
 
 
 % Originally compiled by Marek Chrobak and John Noga,
@@ -54,8 +54,8 @@
 @STRING{AMM          = {Amer. Math. Monthly} }
 @STRING{AnnProb      = {Ann. Probab.} }
 @STRING{CACM         = {Commun. ACM} }
-@STRING{CanadJM      = {Canad. J. Math.} },
-@STRING{CollBolyai   = {Coll. Math. Soc. Janos Bolyai} },
+@STRING{CanadJM      = {Canad. J. Math.} }
+@STRING{CollBolyai   = {Coll. Math. Soc. Janos Bolyai} }
 @STRING{Combinatorica= {Combinatorica} }
 @STRING{CompGeo      = {Comput. Geom.} }
 @STRING{CompCompl    = {Comput. Complexity.} }
@@ -106,8 +106,8 @@
 @STRING{ORSAJComp    = {ORSA J. Comput.} }
 @STRING{PacifJ       = {Pacific J. Math.} }
 @STRING{PEngInf      = {Probab Engrg. Inform. Sci.} }
-@STRING{PLond        = {Proc. London Math. Soc.} },
-@STRING{PAMS         = {Proc. AMS} },
+@STRING{PLond        = {Proc. London Math. Soc.} }
+@STRING{PAMS         = {Proc. AMS} }
 @STRING{PrCoSoft     = {Program. Comput. Software} }
 @STRING{RAIROinf     = {RAIRO Inform. Theor. Appl.} }
 @STRING{RAIROopr     = {RAIRO Oper. Res.} }
@@ -121,7 +121,7 @@
 @STRING{Siopt        = {SIAM J. Optim.} }
 @STRING{SigactNews   = {SIGACT News} }
 @STRING{SoftwarePE   = {Softw. Pract. Exper.} }
-@STRING{TAMS         = {Trans. AMS} },
+@STRING{TAMS         = {Trans. AMS} }
 @STRING{TOCS         = {Theory Comput. Syst.} }
 @STRING{TOPLAS       = {ACM Transactions on Programming Languages and Systems} }
 @STRING{TCS          = {Theoret. Comput. Sci.} }
@@ -188,7 +188,7 @@
 
 % FCT
 @string{FCT   = " International Symp.
-        on Fundamentals of Computation Theory (FCT)"},
+        on Fundamentals of Computation Theory (FCT)"}
 @string{FCT05 = "Proc. 15th" # FCT}
 
 % FOCS
@@ -7785,15 +7785,6 @@ note=toappear
 	YEAR = 2003
         }
 
-\@article{GolKer03,
-        AUTHOR = "Michael H. Goldwasser and Boris Kerbikov",
-        TITLE = "Admission Control with Immediate Notification",
-      	JOURNAL = JOS,
-	VOLUME = 6,
-	PAGES = "269-285",
-	YEAR = 2003
-        }
-
 @inproceedings{GolPed06,
         AUTHOR = "Michael H. Goldwasser and Mark Pedigo",
         TITLE = "Online, Non-preemptive Scheduling of Equal-Length Jobs on Two Identical Machines",
@@ -11791,17 +11782,6 @@ note=toappear
         YEAR = 2002,
         PAGES = "163-200"
         }
-
-\inproceedings{PhStWe95,
-	AUTHOR = "Cynthia Philips and Cliff Stein and Joel Wein",
-	TITLE = "Scheduling Jobs that Arrive Over Time",
-	BOOKTITLE = WADS95,
-	PAGES = "86-97",
-	YEAR = 1995,
-        PUBLISHER = "Springer",
-        SERIES = LNCS,
-        VOLUME= "955"
-	}
 
 @article{PhStWe98,
 	AUTHOR = "Cynthia Philips and Cliff Stein and Joel Wein",
