--- a/test/texstuff.bib
+++ b/test/texstuff.bib
@@ -192,8 +192,7 @@
                 mark-up
                 Rijks-uni-ver-si-teit
                 South-all
-                Stutt-gart
-}"
+                Stutt-gart}"
 }
 
 %%% ====================================================================
