--- a/test/test1.bib
+++ b/test/test1.bib
@@ -206,3 +206,36 @@
 
 %% Test whether a "preamble" entrytype correctly places text into the BBL file preamble.
 @PREAMBLE{"\providecommand{\um}{$\mu$m}"}
+
+%% Test whether a trailing comma at the end of the last field causes a parsing error.
+@MONTHFORMAT1{monthformat1,
+  title = {Looney tunes},
+  author = "Bugs Bunny",
+  month = apr,
+  year = {2001},
+}
+
+%% Test whether a trailing comma at the end of the last field causes a parsing error.
+@MONTHFORMAT2{monthformat2,
+  title = {Looney tunes},
+  author = "Bugs Bunny",
+  month = 4,
+  year = {2001},
+}
+
+%% Test whether a trailing comma at the end of the last field causes a parsing error.
+@MONTHFORMAT3{monthformat3,
+  title = {Looney tunes},
+  author = "Bugs Bunny",
+  month = "4",
+  year = {2001},
+}
+
+%% Test whether a trailing comma at the end of the last field causes a parsing error.
+@MONTHFORMAT4{monthformat4,
+  title = {Looney tunes},
+  author = "Bugs Bunny",
+  month = "April",
+  year = {2001},
+}
+
