--- a/test/test1.bib
+++ b/test/test1.bib
@@ -16,7 +16,7 @@
 }
 
 %% Test whether a trailing comma after a title is removed when the title ends with '?'.
-@TITLEPUNCTUATION1{titlepunctuation1,
+@TITLE_PUNCTUATION{title_punctuation,
   title = {Are there quantum jumps?},
   author = {J. S. Bell},
   booktitle = {Speakable and Unspeakable in Quantum Mechanics},
@@ -26,13 +26,13 @@
 }
 
 %% Test whether brace-delimited quotations in a quote-delimited entry are parsed correctly.
-@QUOTEDELIMITS1{quotedelimits1,
+@QUOTE_DELIMITS{quote_delimits,
   title = "Comments on {"}Filenames and Fonts{"}",
   author = "Somebody Else",
   year = "0000"
 }
 
-@PAGERANGE1{pagerange1,
+@PAGE_RANGE{page_range,
   title = {Interview with Walter Stewart},
   author = {Doug Stewart},
   journal = {Omni},
@@ -42,21 +42,27 @@
 }
 
 %% Test the option 'force_sentence_case' to see if upper case letters are forced to lower case except when at brace level > 0.
-@SENTENCECASE1{sentencecase1,
+@FORCE_SENTENCE_CASE{force_sentence_case,
   title = {On the {C}ram{\'e}r-{R}ao Bound under Parametric Constraints},
   author = {Petre Stoica and Boon Chong Ng},
   year = {1998}
 }
 
 %% Test the ability to parse nested italics, so that even-order italics are written with \textup{} rather than \textit{}.
-@NESTEDITALICS1{nesteditalics1,
+@NESTED_ITALICS1{nested_italics1,
   title = {Experimental realization of Einstein-Podolsky-Rosen-Bohm \textit{Gedenkenexperiment}: a new violation of Bell's inequalities},
   author = {Alain Aspect and Philippe Grangier and G{\'e}rard Roger},
   year = {1982}
 }
 
+%% Test the ability to parse nested italics, so that even-order italics are written with \textup{} rather than \textit{}.
+@NESTED_ITALICS2{nested_italics2,
+  title1 = {z\textit{{{\textit{mm}}w\textit{{qq}}}}\textit{zz}y},
+  title2 = {a\textit{\textit{\textit{bbb} cc}d}eee\textit{ff}g}
+}
+
 %% Test the 'french_initials' option, where names with digraphs are truncated only after the digraph. That is, 'Charles' -> 'Ch.' not 'C.'.
-@FRENCHINITIALS1{frenchinitials1,
+@FRENCH_INITIALS{french_initials,
   title = {Sur l'application de ph{\'e}nom{\`e}nes d'interf{\'e}rence {\`a} la solution de divers probl{\`e}mes de spectroscopie et de m{\'e}trologie},
   author = {A. Perot and Charles Fabry},
   year = {1899}
@@ -66,41 +72,35 @@
 %% name containing one comma is correctly parsed, (7) that empty name tokens do not raise errors, (8,9) that a comma-delimited name containing two
 %% commas is correctly parsed (even when the suffix part is empty). Also test that "name1, and name2" parses correctly as two names (one comma-
 %% delimited and one not).
-@NAMEPARSING1{nameparsing1,
+@NAME_PARSING1{name_parsing1,
   title = {None},
   author = {AA and AA bb and AA bb CC and AA bb CC dd EE and bb CC dd EE, AA and bb, AA and BB, and bb CC,XX, AA and BB,, AA},
   year = {0000}
 }
 
 %% Test that the new formats of three-comma-delimited names and four-comma-delimited names are parsed correctly.
-@NAMEPARSING2{nameparsing2,
+@NAME_PARSING2{name_parsing2,
   title = {None},
   author = {First, Middle, Prefix, Last and First, Middle, Prefix, Last, Suffix},
   year = {0000}
 }
 
 %% Test that brace-delimited compound names are parsed correctly.
-@NAMEPARSING3{nameparsing3,
+@NAME_PARSING3{name_parsing3,
   title = {On an absolute thermometric scale, founded on Carnot's theory of the motive power of heat},
   author = {W. {Thomson [Lord Kelvin]}},
   year = {1848}
 }
 
 %% Test that for nested bold formatting, the even-order operators are converted to \textmd{}.
-@NESTEDBOLD1{nestedbold1,
+@NESTED_BOLD{nested_bold,
   title1 = {a\textbf{bb{\A}}c\textbf{d}ff\textbf{{g}}h{i}!},
   title2 = {a\textbf{b{c{\textbf{d}}e\textbf{f}g}h}i}
 }
 
-%% Test the ability to parse nested italics, so that even-order italics are written with \textup{} rather than \textit{}.
-@NESTEDITALICS2{nesteditalics2,
-  title1 = {z\textit{{{\textit{mm}}w\textit{{qq}}}}\textit{zz}y},
-  title2 = {a\textit{\textit{\textit{bbb} cc}d}eee\textit{ff}g}
-}
-
 %% Test that nested quotes are properly parsed, and that special character markup like \"e and \'o is not mistaken
 %% for quotation marks.
-@NESTEDQUOTES1{nestedquotes1,
+@NESTED_QUOTES{nested_quotes,
   title1 = {"`This is' `quoted and ``nested''.'"},
   title2 = {"This is `quoted and ``nested''.'"},
   title3 = {`"This is `quoted and ``nested''.'"'},
@@ -109,7 +109,7 @@
 }
 
 %% Test that when there are more authors than "option.maxauthors", then the bibliography only shows "option.minauthors" number of names.
-@MANYAUTHORS1{manyauthors1,
+@MANY_AUTHORS{many_authors,
   title = {SEGUE: a spectroscopic survey of 240,000 stars with $g = 14$--20},
   author = {Brian Yanny and Constance Rockosi and Heidi Jo Newberg and Gillian R. Knapp and Jennifer K. Adelman-McCarthy and Bonnie Alcorn and Sahar Allam and Carlos Allende Prieto and Deokkeun An and Kurt S.~J. Anderson and Scott Anderson and Coryn A.~L. Bailer-Jones and Steve Bastian and Timothy C. Beers and Eric Bell and Vasily Belokurov and Dmitry Bizyaev and Norm Blythe and John J. Bochanski and William N. Boroski and Jarle Brinchmann and J. Brinkmann and Howard Brewington and Larry Carey and Kyle M. Cudworth and Michael Evans and N.~W. Evans and Evalyn Gates and B.~T. G{\"a}nsicke and Bruce Gillespie and Gerald Gilmore and Ada Nebot Gomez-Moran and Eva K. Grebel and Jim Greenwell and James E. Gunn and Cathy Jordan and Wendell Jordan and Paul Harding and Hugh Harris and John S. Hendry and Diana Holder and Inese I. Ivans and {\v{Z}}eljko Ivezi{\v{c}} and Sebastian Jester and Jennifer A. Johnson and Stephen M. Kent and Scot Kleinman and Alexei Kniazev and Jurek Krzesinski and Richard Kron and Nikolay Kuropatkin and Svetlana Lebedeva and Young Sun Lee and R. French Leger and S{\'e}bastien L{\'e}pine and Steve Levine and Huan Lin and Daniel C. Long and Craig Loomis and Robert Lupton and Olena Malanushenko and Viktor Malanushenko and Bruce Margon and David Martinez-Delgado and Peregrine McGehee and Dave Monet and Heather L. Morrison and Jeffrey A. Munn and Eric H. Neilsen Jr and Atsuko Nitta and John E. Norris and Dan Oravetz and Russell Owen and Nikhil Padmanabhan and Kaike Pan and R.~S. Peterson and Jeffrey R. Pier and Jared Platson and Paola Re Fiorentin and Gordon T. Richards and Hans-Walter Rix and David J. Schlegel and Donald P. Schneider and Matthias R. Schreiber and Axel Schwope and Valena Sibley and Audrey Simmons and Stephanie A. Snedden and J. Allyn Smith and Larry Stark and Fritz Stauffer and M. Steinmetz and C. Stoughton and Mark SubbaRao and Alex Szalay and Paula Szkody and Aniruddha R. Thakar and Sivarani Thirupathi and Douglas Tucker and Alan Uomoto and Dan Vanden Berk and Simon Vidrih and Yogesh Wadadekar and Shannon Watters and Ron Wilhelm and Rosemary F.~G. Wyse and Jean Yarger and Dan Zucker},
   journal = {Astron. J.},
@@ -121,14 +121,14 @@
 }
 
 %% Test that when there are more editors than "options.maxeditors", then the bibliography only shows "option.mineditors" number of names.
-@MANYEDITORS1{manyeditors1,
+@MANY_EDITORS{many_editors,
   title = {Sensors and Camera Systems for Scientific, Industrial, and Digital Photography Applications},
   year = {2000},
   editor = {Morley M. Blouke and Nitin Sampat and Williams, Jr., George M. and Thomas Yeh}
 }
 
 %% Test that the "nameabbrev" field is properly used when formatting an author name.
-@NAMEABBREV1{nameabbrev1,
+@NAME_ABBREV1{name_abbrev1,
   author = {Jean de la Fontaine du Bois Joli},
   title = {Something},
   year = {1234},
@@ -136,7 +136,7 @@
 }
 
 %% Test that multiple "nameabbrev" field entries are properly used when formatting an author name.
-@NAMEABBREV2{nameabbrev2,
+@NAME_ABBREV2{name_abbrev2,
   author = {Jean de la Fontaine
             du Bois Joli},
   title = {Something},
@@ -145,15 +145,16 @@
 }
 
 %% Test that brace-delimited double-quotes inside a quote-delimited field are parsed correctly.
-@BRACEDELIMITEDQUOTES1{bracedelimitedquotes1,
+@BRACE_DELIMITED_QUOTES{brace_delimited_quotes,
   title = "Comments on {"}Filenames and Fonts{"}",
   author = "Someone New",
   year = 4321
 }
 
 %% Test that when the "options.procspie_as_journal" option is True, then the INPROCEEDINGS entry type with "series=procspie" is
-%% converted to a ARTICLE type with journal name "Proc. SPIE".
-@INPROCEEDINGS{procspieasjournal1,
+%% converted to a ARTICLE type with journal name "Proc. SPIE". Note that the entry type here must ne "inproceedings" and not
+%% "procspie_as_journal".
+@INPROCEEDINGS{procspie_as_journal,
   title = {Task-specific snapshot Mueller matrix channeled spectropolarimeter optimization},
   author = {Andrey S. Alenin and J. Scott Tyo},
   booktitle = {Polarization: Measurement, Analysis, and Remote Sensing X},
@@ -164,7 +165,7 @@
 }
 
 %% Part one of testing that crossrefs are correctly applied.
-@CROSSREF1{crossref1,
+@CROSSREF{crossref,
   title = {Task-specific snapshot Mueller matrix channeled spectropolarimeter optimization},
   author = {Andrey S. Alenin and J. Scott Tyo},
   year = {2012},
@@ -184,7 +185,7 @@
 }
 
 %% Test that non-English characters are formatted correctly.
-@JAPANESE1{japanese1,
+@JAPANESE{japanese,
   author = {{乙部} 厳己 and Paul Horton},
   yomi = {よしき おとべ and ポール ホートン},
   author-english = {Tominaga Daisuke and Paul Horton},
@@ -198,7 +199,7 @@
 }
 
 %% Test whether a trailing comma at the end of the last field causes a parsing error.
-@TRAILINGCOMMA1{trailingcomma1,
+@TRAILING_COMMA{trailing_comma,
   title = {Looney tunes},
   author = "Bugs Bunny",
   year = {2001},
@@ -240,8 +241,16 @@
 }
 
 %% Test the name ties option.
-@USENAMETIES1{usenameties1,
+@USE_NAME_TIES{use_name_ties,
   title = {None},
   author = {First, Middle1 Middle2, Prefix, Last and First,, Prefix, Last, Suffix},
   year = {0000}
 }
+
+%% Test whether the period after initials is properly removed.
+@PERIOD_AFTER_INITIAL{period_after_initial,
+  title = {Looney tunes},
+  author = "Bugs R. Bunny",
+  year = {2001},
+}
+
