Added the 'terse_inits' test into the testing suite. This picked up a logic error in the namedict_to_formatted_namestr() function, which is not fixed.

--- a/test/test1.bib
+++ b/test/test1.bib
@@ -254,3 +254,9 @@
   year = {2001},
 }
 
+%% Test whether the "terse inits" options is working correctly -- it should both remove periods after initials and also remove spaces between initials.
+@TERSE_INITS{terse_inits,
+  title = {Looney tunes},
+  author = "Daffy D. Duck",
+  year = {2001},
+}
