Added the 'replace_newlines' test to the testing suite, and also add a comment into bibulous.py to the effect that 'replace_newlines' is another special option that can only be set on instantiating the object and does not get used in the code after that.

--- a/test/test1.bib
+++ b/test/test1.bib
@@ -261,3 +261,19 @@
   year = {2001},
 }
 
+%% Test that newlines in the entry fields are correctly removed in the formatted BBL file.
+@REPLACE_NEWLINES{replace_newlines,
+  title = {Partially coherent
+           illumination in full-field
+           interferometric synthetic
+           aperture microscopy},
+  author = {Daniel L. Marks and
+            Brynmor J. Davis and
+            Stephen A. Boppart and
+            P. Scott Carney},
+  journal = "J. Opt. Soc. Am. A",
+  year = {2009},
+  volume = {26},
+  pages = {376--386}
+}
+
