Added the 'quote_and_accent_detection' test to the testing suite. NOTE! This has temporarily broken the testing, and so needs to be fixed ASAP.

--- a/test/test1.bib
+++ b/test/test1.bib
@@ -277,3 +277,12 @@
   pages = {376--386}
 }
 
+%% Test that the code can detect the difference between apostrophes and accent characters from quotation marks.
+@QUOTE_AND_ACCENT_DETECTION{quote_and_accent_detection,
+  title = {Sur l'{\'e}tude spectrale des protub{\'e}rances solaires [Spectral study of solar prominences]},
+  author = {P. J. C. Janssen},
+  journal = {Comptes Rendus Acad. Sci.},
+  year = {1869},
+  volume = {68},
+  pages = {93--95}
+}
