Fixed the testing problem with nested quotes. This involved adding an additional check into each if-statement inside get_quote_levels() to check that the current quote type on the stack corresponds to the one that we want to remove from the stack. Also added the 'hyperlinked_title' test to the testing quite.

--- a/test/test1.bib
+++ b/test/test1.bib
@@ -286,3 +286,13 @@
   volume = {68},
   pages = {93--95}
 }
+
+@HYPERLINKED_TITLE{hyperlinked_title,
+  title = {Minesweeper is NP-complete},
+  author = {Richard Kaye},
+  journal = {Mathematical Intelligencer},
+  year = {2000},
+  volume = {22},
+  pages = {9--15},
+  doi = {10.1007/BF03025367}
+}
