Fixed several bugs dealing with citation sortkeys. Also added test4 for the testing suite --- this is what led to finding the citekey sorting bugs. Also updated the testing suite with test4 files.

--- a/test/test1.bib
+++ b/test/test1.bib
@@ -117,7 +117,6 @@
   volume = {137},
   pages = {4377--4399},
   number = {5},
-  url = {http://stacks.iop.org/1538-3881/137/i=5/a=4377}
 }
 
 %% Test that when there are more editors than "options.maxeditors", then the bibliography only shows "option.mineditors" number of names.
@@ -188,7 +187,7 @@
 @JAPANESE{japanese,
   author = {{乙部} 厳己 and Paul Horton},
   yomi = {よしき おとべ and ポール ホートン},
-  author-english = {Tominaga Daisuke and Paul Horton},
+  author-english = {Yoshiki Otobe and Paul Horton},
   title = {jBibTEXの使用法},
   title-english = {How to use JBibTeX},
   publisher = {ソフトバンクパブリッシング},
