Added an entry in test4 of the testing suite to check that the 'sortname', 'sortyear', and 'sorttitle' fields are treated properly when sorting citations.

--- a/test/test4.bib
+++ b/test/test4.bib
@@ -117,7 +117,7 @@
   year = {2013}
 }
 
-## Change the title umlaut encoding from UTF8 to TeX-markup ASCII and make sure both methods produce the same sortkey.
+%% Change the title umlaut encoding from UTF8 to TeX-markup ASCII and make sure both methods produce the same sortkey.
 @ARTICLE{Mustafa2013a,
   title = {Quantitative F{\"o}rster resonance energy transfer efficiency measurements using simultaneous spectral unmixing of excitation and emission spectra},
   author = {Sanam Mustafa and John Hannagan and Paul Rigby and Kevin Pfleger and Ben Corry},
@@ -131,4 +131,13 @@
   author = {Sanam Mustafa and John Hannagan and Paul Rigby and Kevin Pfleger and Ben Corry},
   volume = 18,
   year = {2012}
+}
+
+@ARTICLE{Bunny1,
+  title = {Looney tunes},
+  author = "Bugs Bunny",
+  year = {2001},
+  sortyear = 1901,
+  sorttitle = {Wartime ideology and the American animated cartoon},
+  sortname = {Elle Kwok-Yin Ting}
 }
