Added two new options to test4 in the testing suite, checking that options 'sort_case' and 'sort_with_prefix' are operating correctly.

--- a/test/test4.bib
+++ b/test/test4.bib
@@ -141,3 +141,15 @@
   sorttitle = {Wartime ideology and the American animated cartoon},
   sortname = {Elle Kwok-Yin Ting}
 }
+
+%% Test that the citation is sorted by "Gemert" or "van Gemert" depending on the option "sort_with_prefix".
+@INCOLLECTION{Gemert1995,
+  title = {One dimensional transport theory},
+  author = {Martin J. C. van Gemert},
+  booktitle = {Optical-Thermal Response of Laer-Irradiated Tissue},
+  publisher = {Plenum Press},
+  year = {1995},
+  editor = {A. J. Welch and Martin J. C. van Gemert},
+  chapter = {3},
+  pages = {47--72}
+}
