Added a third user script --- for changing format depending on whether there is a comma-delimited page range or a dash-delimited one --- to test5. This brought out a bug in a corner use case in citekey sorting when the 'year' field is a negative number. Fixing this required adding a few lines to the citation sorting code in bibulous.

--- a/test/test5.bib
+++ b/test/test5.bib
@@ -3,7 +3,7 @@
   englishtitle = {Commentaries on the Gallic War},
   language = {Latin},
   author = {Gaius Julius Caesar},
-  year = -45
+  year = -145
 }
 
 @dialogue{cicero,
@@ -29,4 +29,12 @@
   writer = {Publius Cornelius Tacitus},
   year = 117
 }
+
+@article{stewart,
+  title = {Interview with Walter Stewart},
+  author = {Doug Stewart},
+  journal = {Omni},
+  year = {1989},
+  volume = {11},
+  pages = {64--66, 87--92, 94}
 }
